Add get scan results

--- a/plugin.xml
+++ b/plugin.xml
@@ -25,6 +25,7 @@
     <config-file target="AndroidManifest.xml" parent="/manifest">
       <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
       <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+      <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     </config-file>
 
     <source-file src="src/dk/kapetanovic/wifimanager/WifiManagerPlugin.java" target-dir="src/dk/kapetanovic/wifimanager" />
