--- a/plugin.xml
+++ b/plugin.xml
@@ -26,7 +26,10 @@
       <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
       <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
       <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+      <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     </config-file>
+
+    <preference name="android-minSdkVersion" value="23" />
 
     <source-file src="src/dk/kapetanovic/wifimanager/WifiManagerPlugin.java" target-dir="src/dk/kapetanovic/wifimanager" />
   </platform>
