--- a/plugin.xml
+++ b/plugin.xml
@@ -16,6 +16,8 @@
     </js-module>
 
     <config-file target="res/xml/config.xml" parent="/*">
+      <preference name="android-minSdkVersion" value="23" />
+
       <feature name="WifiManagerPlugin">
         <param name="android-package" value="dk.kapetanovic.wifimanager.WifiManagerPlugin" />
         <param name="onload" value="true" />
@@ -26,6 +28,7 @@
       <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
       <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
       <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+      <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     </config-file>
 
     <source-file src="src/dk/kapetanovic/wifimanager/WifiManagerPlugin.java" target-dir="src/dk/kapetanovic/wifimanager" />
