--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "standard": "^10.0.3"
     },
     "scripts": {
-        "test": "standard --verbose"
+        "test": "standard --verbose",
+        "preversion": "git add CHANGELOG.md && git add plugin.xml",
+        "postversion": "git push && git push --tags"
     },
     "cordova": {
         "id": "cordova-plugin-android-wifi-manager",
